src/scss/reader.scss
.content img
{
  width: 100%;
  height: auto;
  margin-top: 15px;
  margin-bottom: 15px;
}

.wp-caption
{
  width: 100% !important;

  img
  {
    margin-bottom: 5px !important;
  }

  .wp-caption-text
  {
    margin-top:0px;
    text-align: center;
    color: $menubar-text-colour !important;
  }
}

.content li
{
  color: $text-disabled-colour;
  font-size: 18px;
}

iframe
{
  display: block;
  margin: 0 auto;
  margin-bottom: 20px;
}

pre
{
    color: $text-disabled-colour;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
    padding-right: 10px;
    margin-top: 20px;
    margin-bottom: 20px;
}

